--- a/style.css
+++ b/style.css
@@ -122,9 +122,10 @@ main {
 .products {
   display: grid;
   gap: 20px;
-  /* grid-template-columns: repeat(3, 1fr); */
+  
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  align-items: flex-start;
+  grid-auto-rows:max-content ;
+  /* align-items: center; */
 }
 
 .product-card {
@@ -238,6 +239,7 @@ form input {
   gap: 10px;
   grid-template-columns: 1fr ;
   padding-top: 100px;
+
 }
 
 
@@ -271,7 +273,7 @@ form input {
   .main-content {
     display: grid;
     gap: 10px;
-    grid-template-columns: 1fr 1fr ;
+    grid-template-columns: 1fr  ;
     padding-top: 100px;
   }
 
